--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "PyTorch DataLoader for medical images using pyable"
 readme = "README.md"
 authors = [
-    {name = "Eros Montin", email = "eros.montin@moffitt.org"}
+    {name = "Eros Montin", email = "eros.montin@gmail.com"}
 ]
 license = {text = "MIT"}
 requires-python = ">=3.8"
